chore: update deps

--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
 		"preview": "astro preview"
 	},
 	"dependencies": {
-		"astro": "^4.15.4",
+		"astro": "^4.15.9",
 		"sharp": "^0.33.5"
 	},
 	"devDependencies": {
-		"@biomejs/biome": "^1.8.3"
+		"@biomejs/biome": "^1.9.2"
 	},
-	"packageManager": "pnpm@9.9.0+sha512.60c18acd138bff695d339be6ad13f7e936eea6745660d4cc4a776d5247c540d0edee1a563695c183a66eb917ef88f2b4feb1fc25f32a7adcadc7aaf3438e99c1"
+	"packageManager": "pnpm@9.11.0"
 }
