--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
 		"preview": "astro preview"
 	},
 	"dependencies": {
-		"astro": "^4.15.9",
+		"astro": "^4.16.8",
 		"sharp": "^0.33.5"
 	},
 	"devDependencies": {
-		"@biomejs/biome": "^1.9.2"
+		"@biomejs/biome": "^1.9.4"
 	},
-	"packageManager": "pnpm@9.11.0"
+	"packageManager": "pnpm@9.12.3+sha512.cce0f9de9c5a7c95bef944169cc5dfe8741abfb145078c0d508b868056848a87c81e626246cb60967cbd7fd29a6c062ef73ff840d96b3c86c40ac92cf4a813ee"
 }
