--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-	"name": "asyomei.github.io",
+	"name": "asyomei.org",
 	"type": "module",
-	"version": "0.0.1",
+	"version": "1.0.0",
+	"private": "true",
 	"scripts": {
 		"dev": "astro dev",
 		"start": "astro dev",
